# felitronics-core

./: .clangd  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  THIRD_PARTY_NOTICES.md  summary.csv
.github/: CODEOWNERS  dependabot.yml
docs/: CORE-OVERVIEW.md  DSP-ARCHITECTURE.md  PERF-CONVOLVER-JUCE-GAP.md  PERF-NUPC-VS-JUCE.md  PERF-SCALAR-FFT-BOTTLENECK.md  (+2 more)
modules/analysis/: CMakeLists.txt
modules/analysis/include/felitronics/analysis/: CorrelationMeter.h  KWeightingFilter.h  LoudnessMeter.h  RollingSpectrumTap.h  SpectrumTap.h  TruePeakMeter.h
modules/analysis/include/felitronics/analysis/offline/: SpectrumCurve.h
modules/analysis/tests/: AnalysisTests.cpp  SpectrumCurveTests.cpp  TruePeakMeterTests.cpp
modules/analysis/tests/crossnull/: README.md  check.py  dump.cpp
modules/blend/: CMakeLists.txt
modules/blend/include/felitronics/blend/: Blend.h  BlendKernels.h  BlendParams.h  IrBlend.h  Overlay.h
modules/blend/tests/: BlendTests.cpp  OverlayTests.cpp
modules/convolution/: CMakeLists.txt
modules/convolution/include/felitronics/convolution/: CabConvolver.h  ConvolutionEngine.h  IrResampler.h  MatrixConvolver.h  MatrixConvolverNupc.h  NonUniformConvolver.h  PartitionedConvolver.h
modules/convolution/tests/: CabConvolverTests.cpp  ConvolutionEngineTests.cpp  ConvolutionTests.cpp  MatrixConvolverNupcStressTests.cpp  MatrixConvolverNupcTests.cpp  MatrixConvolverTests.cpp  NonUniformConvolverTests.cpp  ResamplerTests.cpp
modules/core/: CMakeLists.txt
modules/core/include/felitronics/core/: Config.h  DelayLine.h  DryAligner.h  Fft.h  FlushToZero.h  Math.h  OfflineFft.h  RtStreams.h  Smoother.h  StreamResampler.h
modules/core/tests/: CoreTests.cpp  DryAlignerFalsifyTests.cpp  DryAlignerTests.cpp  DryAlignerTheoryTests.cpp  FftTests.cpp  FlushPoisonFalsifyTests.cpp  FlushPoisonTheoryTests.cpp  RtStreamsTests.cpp  StreamResamplerFalsifyTests.cpp  StreamResamplerTests.cpp  StreamResamplerTheoryTests.cpp
modules/deesser/: CMakeLists.txt
modules/deesser/include/felitronics/deesser/: DeEsser.h
modules/deesser/tests/: DeEsserTests.cpp
modules/dither/: CMakeLists.txt
modules/dither/include/felitronics/dither/: Dither.h
modules/dither/tests/: DitherTests.cpp
modules/dynamiceq/: CMakeLists.txt
modules/dynamiceq/include/felitronics/dynamiceq/: DynamicEqBand.h
modules/dynamiceq/tests/: DynamicEqTests.cpp
modules/dynamics/: CMakeLists.txt
modules/dynamics/include/felitronics/dynamics/: AutoLeveler.h  ChannelLinker.h  Compressor.h  EnvelopeFollower.h  GainComputer.h  GainReductionFollower.h  NoiseGate.h  TransientShaper.h
modules/dynamics/tests/: AutoLevelerFalsifyTests.cpp  AutoLevelerTests.cpp  AutoLevelerTheoryTests.cpp  CompressorTests.cpp  DynamicsTests.cpp  NoiseGateTests.cpp  TransientShaperTests.cpp
modules/eq/: CMakeLists.txt
modules/eq/include/felitronics/eq/: Crossover2.h  EqBand.h  EqEngine.h  EqTypes.h  MatchedBiquad.h  MultibandSplitter.h  Svf.h
modules/eq/include/teq/: EqBand.h  EqEngine.h  EqTypes.h  MatchedBiquad.h  Math.h  Smoother.h  SpectrumTap.h  Svf.h
modules/eq/tests/: CrossoverTests.cpp  EqEngineTests.cpp  MatchedBiquadTests.cpp  SvfTests.cpp  TestMain.cpp  TestUtil.h
modules/fftpffft/: CMakeLists.txt
modules/fftpffft/include/felitronics/fftpffft/: PffftRealFft.h
modules/fftpffft/src/: PffftRealFft.cpp
modules/fftpffft/tests/: PffftNullTests.cpp
modules/io/: CMakeLists.txt
modules/io/include/felitronics/io/: Wav.h
modules/io/tests/: WavTests.cpp
modules/limiter/: CMakeLists.txt
modules/limiter/include/felitronics/limiter/: TruePeakLimiter.h
modules/limiter/tests/: LimiterTests.cpp
modules/lineareq/: CMakeLists.txt
modules/lineareq/include/felitronics/lineareq/: LinearPhaseEq.h  MixedPhaseFir.h  NaturalPhaseEq.h
modules/lineareq/tests/: LinearPhaseEqTests.cpp  MatrixFirTests.cpp  MixedPhaseFirTests.cpp  NaturalPhaseEqTests.cpp
modules/measurement/: CMakeLists.txt
modules/measurement/include/felitronics/measurement/: CaptureGate.h  Convolve.h  Deconvolve.h  IrPost.h  LevelProbe.h  MicSetAlign.h  ModelGuess.h  PeakClip.h  ReferenceUnity.h  Sweep.h  XcorrAlign.h
modules/measurement/tests/: AdversarialTests.cpp  IrPostLeadingSilenceTests.cpp  IrPostLeadingSilenceTheoryTests.cpp  LevelProbeFalsifyTests.cpp  LevelProbeTests.cpp  LevelProbeTheoryTests.cpp  MeasurementTests.cpp  ModelGuessTests.cpp
modules/measurement/tests/crossnull/: .gitignore  README.md  check.py  dump.cpp
modules/multiband/: CMakeLists.txt
modules/multiband/include/felitronics/multiband/: MultibandCompressor.h  MultibandProcessor.h  MultibandWidth.h
modules/multiband/tests/: MultibandTests.cpp  MultibandWidthTests.cpp
modules/nam/: CMakeLists.txt
modules/nam/include/felitronics/nam/: NamStage.h
modules/nam/src/: NamStage.cpp
modules/nam/tests/: NamStageRtAllocTests.cpp  NamStageTests.cpp
modules/neural/: CMakeLists.txt
modules/neural/include/felitronics/neural/: Inference.h  NeuralStage.h
modules/neural/tests/: NeuralTests.cpp
modules/oversampling/: CMakeLists.txt
modules/oversampling/include/felitronics/oversampling/: PolyphaseOversampler.h
modules/oversampling/tests/: OversamplingTests.cpp
modules/poweramp/: CMakeLists.txt
modules/poweramp/include/felitronics/poweramp/: PowerAmpStage.h  SagEnvelope.h  TubeStage.h
modules/poweramp/tests/: PowerAmpFalsifyTests.cpp  PowerAmpGoldenTests.cpp  PowerAmpTheoryTests.cpp
modules/saturation/: CMakeLists.txt
modules/saturation/include/felitronics/saturation/: Saturator.h  WaveShaper.h
modules/saturation/tests/: SaturationTests.cpp  SaturatorFalsifyTests.cpp  SaturatorTheoryTests.cpp
modules/stereo/: CMakeLists.txt
modules/stereo/include/felitronics/stereo/: MidSide.h  MonoBass.h  StereoWidth.h
modules/stereo/tests/: StereoTests.cpp
modules/text/: CMakeLists.txt
modules/text/include/felitronics/text/: Translit.h
modules/text/tests/: TranslitTests.cpp
tools/: CMakeLists.txt  JuceRealFft.h  fcore_convolve.cpp  fcore_measure.cpp  fftbench.cpp  plot-convolver-sweep.py  validate_ffmpeg.sh
tools/eqviz/: eqviz.cpp
(+6 files in other folders)
